--- a/basic_agent/conversational_agent/.env
+++ b/basic_agent/conversational_agent/.env
@@ -1,3 +1,3 @@
 GOOGLE_GENAI_USE_VERTEXAI = FALSE
-GOOGLE_API_KEY= AIzaSyD096wOin6eR4uebjMQJcJOs0YcXN0Fki8
-GOOGLE_CSE_ID= AIzaSyBOagAODCE0XW26SJMBiH5yqsDU3UlhpCk
+GOOGLE_API_KEY= "GOOGLE_API_KEY"
+GOOGLE_CSE_ID= "GOOGLE_CSE_ID"
